# uvrpc

./: .gitignore  .gitmodules  BROADCAST_DSL_TEST_REPORT.md  CMakeLists.txt  MEMORY_COPY_OPTIMIZATION_ANALYSIS.md  Makefile  PERFORMANCE_TEST_FINAL_REPORT.md  PERFORMANCE_TEST_REPORT_2026_02_19.md  PERFORMANCE_TEST_RESULTS.md  PRIMITIVES_IMPLEMENTATION_SUMMARY.md  README.md  README_SIMPLIFIED.md  UVSYNC_DESIGN.md  allocator_demo  async_await_demo  async_chain_demo  benchmark  broadcast_publisher  broadcast_subscriber  build.sh  compile_commands.json  concurrent_demo  debug_test  debug_transport.c  echo_client  echo_server  gateway_demo  loop_injection_example  msgid_demo  perf_test  pyproject.toml  quickstart.sh  requirements-dev.txt  rpc_dsl_generator_with_flatcc.spec  simple_client  simple_server  test_cleanup_issue  test_cleanup_issue.c  test_client  test_inproc_full  (+19 more)
benchmark/: BENCHMARK_README.md  BROADCAST_BENCHMARK_README.md  CMakeLists.txt  README.md  TRANSPORT_PERFORMANCE_REPORT.md  benchmark.c  benchmark_client.c  benchmark_multiprocess  benchmark_multiprocess.c  benchmark_server.c  benchmark_single_loop.c  broadcast_benchmark.c  comprehensive_perf_test.sh  gen_benchmark.c  inproc_test.c  latency_compare.sh  latency_test.c  perf_benchmark.c  perf_client.c  perf_client_fixed.c  perf_server.c  perf_test.c  quick_comprehensive_test.sh  rpc_benchmark.fbs  run_automated_perf_tests.sh  run_benchmark.sh  simple_latency_test.c  simple_perf_test.sh  simple_stress_test.sh  stress_test_multi_loop.c  test_all_configs.sh  test_all_modes_transports.sh  test_all_transports.sh  test_broadcast.sh  test_concurrent_performance.sh  unified_benchmark.c  unified_test.c  uvrpc_benchmark
benchmark/results/: PERFORMANCE_ANALYSIS.md  comprehensive_report.md  concurrent_performance_report_20260219_114115.md  quick_report.md  quick_test.sh
docs/: API_DESIGN_PHILOSOPHY.md  API_GUIDE.md  API_REFERENCE.md  BUILD_AND_INSTALL.md  DESIGN_PHILOSOPHY.md  DOCUMENTATION_SUMMARY.md  DSL_USAGE.md  Doxyfile  EVENT_LOOP_MODES.md  IMMEDIATE_MODE_ANALYSIS.md  LAYER2_API_GUIDE.md  MIGRATION_GUIDE.md  NEW_API_DESIGN.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  PRIMITIVES_CHEATSHEET.md  PRIMITIVES_GUIDE.md  QUICK_START.md  README.md  TOOLS_GUIDE.md  UVBUS_UVRPC_ARCHITECTURE.md  UVRPC_UVBUS_INTEGRATION.md  UVRPC_UVBUS_INTEGRATION_V2.md  YAML_RPC_DSL.md  build-docs.sh  index.md  package.json  quick-start.md
examples/: README.md  allocator_demo.c  async_await_demo.c  async_chain_demo.c  async_client.c  async_client_uv.c  async_multi_test.sh  async_server.c  async_server_uv.c  await_example.c  benchmark.c  broadcast_publisher.c  broadcast_service_demo.c  broadcast_subscriber.c  callback_vs_await.c  complete_example.c  concurrent_demo.c  debug_test.c  echo.fbs  echo_client.c  echo_handlers.h  echo_server.c  echo_service.yaml  flatbuffers_demo.c  flatbuffers_simple_demo.c  gateway_demo.c  generated_client_example.c  high_perf_client.c  high_perf_server.c  inproc_test.c  layer2_example.c  loop_injection_example.c  msgid_demo.c  multi_client.c  multi_proc_test.sh  multi_service_loop_reuse.c  nng_multi_proc_test.sh  nng_parallel_test.sh  parallel_test.sh  perf_mode_demo.c  (+34 more)
flatcc/: DartConfiguration.tcl
include/: uvasync.h  uvbus.h  uvbus_config.h  uvbus_v2.h  uvrpc.h  uvrpc.h.bak  uvrpc_allocator.h  uvrpc_async.h  uvrpc_bus.h  uvrpc_primitives.h
libuv/: DartConfiguration.tcl
schema/: broadcast.fbs  rpc.fbs  rpc_api.fbs  rpc_broadcast.fbs  rpc_example.fbs
scripts/: check_comments.sh  debug_client.c  generate_docs.sh  multi_perf_test.sh  perf_test.sh  perf_test_concurrent.sh  perf_test_high.sh  quick_broadcast_test.sh  quick_perf.sh  quick_tcp_test.sh  run_all_perf_tests.sh  run_tcp_perf_test.sh  run_unit_tests.sh  setup_deps.sh  simple_perf_test.sh  simple_tcp_perf.sh  test_all_transports.sh  test_all_transports_perf.sh  test_broadcast_dsl.sh  test_broadcast_perf.sh  test_broadcast_simple.sh  test_inproc_perf.sh  test_inproc_perf_final.sh  test_inproc_same_process.sh  test_ipc.sh  test_payload_sizes.sh  test_perf.sh  test_perf_final.sh  test_rpc.sh  test_simple.sh  test_stability.sh  test_tcp_ipc.sh  test_udp.sh  test_udp_perf.sh  test_udp_perf_final.sh
src/: binary_protocol.h  json_serializer.c  json_serializer.h  msgpack_serializer.c  msgpack_serializer.h  msgpack_wrapper.c  msgpack_wrapper.h  simple_zmq_client.c  simple_zmq_server.c  uvasync.c  uvbus.c  uvbus_transport_inproc.c  uvbus_transport_ipc.c  uvbus_transport_tcp.c  uvbus_transport_udp.c  uvrpc_allocator.c  uvrpc_async.c  uvrpc_broadcast.c  uvrpc_broadcast.h  uvrpc_broadcast_service.h  uvrpc_bus.c  uvrpc_client.c  uvrpc_config.c  uvrpc_context.c  uvrpc_flatbuffers.c  uvrpc_flatbuffers.h  uvrpc_frame.c  uvrpc_idmap.c  uvrpc_idmap.h  uvrpc_internal.h  uvrpc_khash.h  uvrpc_msgid.c  uvrpc_msgid.h  uvrpc_msgpack.c  uvrpc_msgpack.h  uvrpc_new.c  uvrpc_primitives.c  uvrpc_publisher.c  uvrpc_server.c  uvrpc_service.c  (+12 more)
tests/: CMakeLists.txt  benchmark_multi_client.c  benchmark_pipeline.c  benchmark_raw.c  ipc_performance_test.c  perf_test.c  run_tests.sh  tcp_performance_test.c  test_await_data_validity.c  test_basic.c  test_common.h  test_concurrent_await.c  test_generated_client.c  test_generated_code_perf.c  test_inproc_perf.c  test_ipc_fix.c  test_new_api_perf.c  test_performance.c  test_req_rep.c  test_router_dealer.c  test_simple.c  test_zmq_raw.c
tests/e2e/: README.md
tests/integration/: CMakeLists.txt  test_broadcast.c  test_error_handling.c  test_inproc.c  test_ipc.c  test_multi_client.c  test_reconnect.c  test_tcp.c  test_udp.c
tests/unit/: README.md  test_allocator.cpp  test_async.cpp  test_bus.c  test_client.cpp  test_client_concurrency.cpp  test_client_context.cpp  test_client_retry.cpp  test_config.cpp  test_context.cpp  test_flatbuffers.cpp  test_msgid.cpp  test_publisher.cpp  test_server.cpp  test_server_context.cpp  test_server_stats.cpp  test_subscriber.cpp  test_uvbus.cpp
tools/: GENERATOR_QUICK.md  GENERATOR_README.md  PYTHON.md  README.md  build_generator.sh  build_generator_portable.sh  build_generator_static.sh  cli.js  (+17 more)
(+494 files in other folders)
